--- a/day-49/style.css
+++ b/day-49/style.css
@@ -4,13 +4,14 @@
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
+html, body {
+    height: 100%;
+    width: 100%;
+}
 
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #f2f2f2;
+   background-color: black;
+   padding: 30px;
 }
 
 #main {
@@ -19,22 +20,25 @@ body {
     gap: 15px;
 }
 
-#elem {
-    padding: 12px 30px;
-    background-color: #1877f2;
-    color: white;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 16px;
-    text-align: center;
-    user-select: none;
-    transition: 0.3s;
+.elem {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 20px ;
+    background-color: #333;
+    border-radius: 10px;
+    margin-top: 10px;
 }
+button{
+  background-color: royalblue;
+  color: #fff;
+  padding: 10px;
 
-#elem:hover {
+}
+/* #elem:hover {
     background-color: #0f5dc8;
 }
 
 #elem:active {
     transform: scale(0.95);
-}
+} */
